--- a/app/backend/appsettings.json
+++ b/app/backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=chatdb;user=chatuser;password=chatpass;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
